# nexteco

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LISEZMOI.md  README.md  README4AGENTS.md  README4CONSULTANTS.md  README4MAINTAINERS.md  advanced.md  core.md  cost_of_running.full.yaml.example  cost_of_running.min.yaml.example  cost_of_running.yaml.example  pyproject.toml
docs/: benchmark-patterns.md  methodology.md  roadmap.md  yaml-schema.md
examples/: generated_from_full_example.md  rag_llm_judge_chatgpt4o.md  rag_llm_judge_ollama_gemma3_4b.md
examples/fixtures/go_tool_repo/: README.md
examples/fixtures/python_cli_repo/: README.md
examples/fixtures/typescript_service_repo/: README.md
nexteco/: __init__.py  cli.py  measure.py  model.py  templates.py
nexteco.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: benchmark_render.py  render_cost_of_running.py  sync_lisezmoi.py  validate_cost_of_running.py
skill/nexteco/: SKILL.md
skill/nexteco/agents/: openai.yaml
skill/nexteco/assets/: logo.txt
skill/nexteco/references/: benchmark-patterns.md  examples.md  honesty-taxonomy.md  methodology.md  repo-archetypes.md  triggering-guide.md
skill/nexteco/scripts/: init_cost_model.py  render_cost_model.py  validate_cost_model.py
tests/: test_nexteco.py
